package: make non-kmod packages not depend on kmod packages
Make non-kmod packages not depend on kmod packages. This is necessary to
prevent the rootfs compilation depending on the kernel.

Signed-off-by: Arınç ÜNAL <arinc.unal@arinc9.com>

--- a/package/network/utils/nftables/Makefile
+++ b/package/network/utils/nftables/Makefile
@@ -38,7 +38,7 @@ define Package/nftables/Default
   CATEGORY:=Network
   SUBMENU:=Firewall
   TITLE:=nftables userspace utility
-  DEPENDS:=+kmod-nft-core +libnftnl
+  DEPENDS:=+libnftnl
   URL:=http://netfilter.org/projects/nftables/
   PROVIDES:=nftables
 endef
