Add ratbond package and enable it
Signed-off-by: Arınç ÜNAL <arinc.unal@arinc9.com>

--- a/.config
+++ b/.config
@@ -5973,6 +5973,7 @@ CONFIG_PACKAGE_ppp-mod-pppoe=y
 # CONFIG_PACKAGE_ptunnel-ng is not set
 # CONFIG_PACKAGE_qcsuper is not set
 # CONFIG_PACKAGE_radsecproxy is not set
+CONFIG_PACKAGE_ratbond=y
 # CONFIG_PACKAGE_ratched is not set
 # CONFIG_PACKAGE_ratechecker is not set
 # CONFIG_PACKAGE_redsocks is not set
