--- a/files/etc/v2ray/config.json
+++ b/files/etc/v2ray/config.json
@@ -36,6 +36,10 @@
         "sockopt": {
           "mptcp": true
         }
+      },
+      "mux": {
+        "enabled": true,
+        "concurrency": 8
       }
     }
   ]
